# llm-summary

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
assets/: style.css
config/: config.example.toml
src/llm_summary/: __init__.py  config.py  crawler.py  db.py  events.py  github_client.py  graph.py  llm.py  main.py  metrics.py  net.py  paths.py  renderer.py  review.py  schema.sql  slug.py
templates/: base.html  day.html  index.html  object.html
tests/: conftest.py  test_changed_files.py  test_cli_dates.py  test_context_limit.py  test_events.py  test_github_comments.py  test_head_update.py  test_idempotency.py  test_incremental.py  test_json_parse.py  test_llm_retry.py  test_metrics.py  test_prompt_structure.py  test_proxy.py  test_render_all.py  test_renderer.py  test_review.py  test_schema.py  test_section_order.py  test_summary_split.py  test_upsert.py
